@@ -17,14 +17,14 @@ For latest version, detailed usage instructions and demo cases, please visit [Sc
 
 == Installation ==
 
-= Prerequisite =
+###Prerequisite###
 1. Starting from ScoreRender 0.2, PHP4 compatibility is dropped, and PHP5 is strictly needed.
-2. Starting from ScoreRender 0.2, ImageMagick >= 6.3.6-2 is needed, due to usage of -flatten option.
+2. Starting from ScoreRender 0.2, ImageMagick >= 6.3.6-2 is needed, due to usage of `-flatten` option.
 3. Music rendering programs must also be installed on the same machine web server is running. For example, to support Lilypond fragments, Lilypond >= 2.8.1 must be installed in web server. Refer to [installation page](http://scorerender.abelcheung.org/installation/) for more detail.
 
-= New install =
+###New install###
 1. Install any prerequisite programs as noted above.
-2. Extract archive, and copy 'scorerender' folder to wp-content/plugins/.
+2. Extract archive, and copy 'scorerender' folder to `wp-content/plugins/`, keeping the folder structure intact.
 3. Login to WordPress and enable the plugin in admin interface.
 4. Configure ScoreRender under the ScoreRender tab of the Options page.
 5. In Option -> Writing, check if this option is turned on:
@@ -35,7 +35,7 @@ For latest version, detailed usage instructions and demo cases, please visit [Sc
    since this option will convert "<<" and ">>" into "< <" and "> >"
    correspondingly, thus destroying the music content and cause render error.
 
-= Upgrade =
+###Upgrade###
 1. Deactivate the plugin in WordPress admin page.
 2. Remove the whole plugin folder.
 3. Upload new plugin and activate again.
@@ -48,7 +48,7 @@ The error code indicates the kind of error in some degree. There are comments in
 
 = Is any ABC notation compatible program also supported? =
 
-Since 0.2, [abcm2ps](http://moinejf.free.fr/) will be the only one supported. This is a design decision. If you REALLY want to use other similar programs, you are on your own, though modifying the code to support others is not very hard. Take a look at is_notation_usable() method in class.abc.inc.php.
+Since 0.2, [abcm2ps](http://moinejf.free.fr/) will be the only one supported. This is a design decision. If you REALLY want to use other similar programs, you are on your own, though modifying the code to support others is not very hard. Take a look at `is_notation_usable()` method in class.abc.inc.php.
 
 = I want to remove cache for 1 image and re-render, but how can I determine which is which? =
 
@@ -75,3 +75,33 @@ http://scorerender.abelcheung.org/screenshot/
 == License ==
 This plugin is released under GPL.
 
+== ChangeLog ==
+
+**Version 0.2.1**
+
+* Fix turning on/off IE transparency option.
+
+**Version 0.2.0**
+
+* Revamp admin page and simplify options.
+* Allows limiting number of score fragments and length of fragment.
+* Allows showing music source code when image is clicked.
+* Better Windows support.
+* Mandates abcm2ps must be used for ABC notation support.
+
+**Version 0.1.3**
+
+* Add WordPress nonce protection.
+
+**Version 0.1.2**
+
+* Fix image rendering during ImageMagick conversion process.
+
+**Version 0.1.1**
+
+* Fix transparency of images generated by Lilypond.
+* Issue warning if 'correct invalidly nested XHTML automatically' option is checked, instead of turning the option off.
+
+**Version 0.1.0**
+
+* Initial release.
